5.11.2
------
1. Update icon mapping for 'LyrPlay' due to its 'Model' change.

5.11.1
------
1. Improve accuracy of list 'Scroll to'.
2. Remove 'Del' shortcut, as its breaking A-Z jumplist.
3. Use 'apple' icon for 'LyrPlay'.
4. Fix/work-around issues with using Default for server-settings and having
   custom actions.

5.11.0
------
 1. Add support for extended meta-data in SlimBrowse commands.
 2. Move 'Sleep all' and 'Create group player' into menu of 'Manager players'
    dialog.
 3. Add 'Clear queue', 'Switch off', and 'Switch on' for all players in menu
    of 'Manager players' dialog.
 4. If using playlist images, then add an overlay icon top-left for favourited
    playlists.
 5. Enable playlist images by default.
 6. Default to grid view.
 7. Re-add notification support, removed in 4.0.0, as used by some plugins.
 8. Click on MAI header to show a 'Scroll to' dialog allowing to scroll to
    specific sections.
 9. For touch devices clicking on MAI header always shows 'Scroll to' dialog
    instead of scrolling to artist under touch.
10. Change dialog re-position minimum size to 600x600px.
11. Don't scroll, or highlight, lyrics if current time is 15mins (or more) past
    time of last line.
12. Use list image size for covers of stream items in queue.
13. For settings pages (loaded in iframe) set default text colour (dark/light)
    in CSS and update when page loaded.
14. Press 'Del' to remove selected items for queue, favourites, or playlists.
15. Show disc subtitle in queue.
16. Allow specifying local IP address in URL query, and use this to hide the
    'Start player' command if local player found.

5.10.6
------
1. Disable repeat it set to repeat single and random mix is active.
2. Fix playlist folder browsing.

5.10.5
------
1. Use 'sticky' MAI titles, with background, to fix cropped text.

5.10.4
------
 1. Support back-slash escaping of commas in release types - e.g. "A\, B".
 2. If showing multiple artist biographies in MAI then add titles for each.